# voom

./: .gitignore  .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SALVAGE_NOTES.md  SECURITY.md  deny.toml  justfile  sonar-project.properties
crates/voom-cli/: Cargo.toml  build.rs
crates/voom-cli/src/: app.rs  capability_collector.rs  cli.rs  config.rs  config_paths.rs  introspect.rs  kernel_invoke.rs  lib.rs  lock.rs  main.rs  output.rs  paths.rs  policy_map.rs  policy_paths.rs  progress.rs  recovery.rs  retention.rs  stats.rs  tools.rs
crates/voom-cli/src/commands/: backup.rs  completions.rs  config.rs  db.rs  discovery_dispatch.rs  doctor.rs  env.rs  estimate.rs  events.rs  files.rs  health.rs  history.rs  init.rs  inspect.rs  jobs.rs  mod.rs  plans.rs  plugin.rs  plugin_stats.rs  policy.rs  process.rs  report.rs  scan.rs  serve.rs  since.rs  status.rs  tools.rs  verify.rs  version.rs
crates/voom-cli/tests/: cli_tests.rs  env_libvmaf.rs  executor_routing.rs  functional_tests.rs  health_retention_coverage.rs  phase_orchestrator_parity.rs  pipeline_integration.rs  plugin_stats_e2e.rs  process_acceptance.rs  vmaf_e2e.rs
crates/voom-cli/tests/common/: mod.rs
crates/voom-domain/: Cargo.toml
crates/voom-domain/src/: bad_file.rs  call.rs  capabilities.rs  capability_map.rs  capability_resolution.rs  compiled.rs  errors.rs  estimate.rs  evaluation.rs  events.rs  host_types.rs  job.rs  lib.rs  media.rs  orchestration.rs  plan.rs  plugin_stats.rs  safeguard.rs  scan.rs  scan_session_mutations.rs  snapshot.rs  stats.rs  storage.rs  temp_file.rs  test_support.rs  transcode.rs  transition.rs  verification.rs  wasm_call.rs
crates/voom-domain/src/utils/: codecs.rs  datetime.rs  disk.rs  format.rs  language.rs  mod.rs  normalize.rs  sanitize.rs  (+2 more)
crates/voom-dsl/: Cargo.toml
crates/voom-dsl/fuzz/: Cargo.toml  README.md
crates/voom-dsl/src/: ast.rs  bundled.rs  compiled.rs  compiler.rs  composition.rs  errors.rs  formatter.rs  grammar.pest  lib.rs  parser.rs  service.rs  validator.rs
crates/voom-dsl/tests/: composition.rs  container_allow_list.rs  parser_snapshots.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
crates/voom-kernel/: Cargo.toml
crates/voom-kernel/benches/: dispatch.rs
crates/voom-kernel/src/: bus.rs  capabilities.rs  errors.rs  host.rs  lib.rs  loader.rs  manifest.rs  registry.rs  stats_sink.rs
crates/voom-kernel/tests/: integration.rs  wasm_streaming_dispatch.rs
crates/voom-plugin-sdk/: Cargo.toml  README.md
crates/voom-plugin-sdk/src/: call.rs  event.rs  host.rs  lib.rs  types.rs
crates/voom-policy-testing/: Cargo.toml
crates/voom-policy-testing/src/: lib.rs
crates/voom-policy-testing/tests/: policy_testing.rs
crates/voom-process/: Cargo.toml
crates/voom-process/src/: lib.rs
crates/voom-wit/: Cargo.toml
crates/voom-wit/src/: convert.rs  lib.rs
crates/voom-wit/wit/: host.wit  plugin.wit  types.wit  world.wit
plugins/backup-manager/: Cargo.toml
plugins/backup-manager/src/: backup.rs  destination.rs  inventory.rs  lib.rs  space.rs
plugins/bus-tracer/: Cargo.toml
plugins/bus-tracer/src/: lib.rs
plugins/capability-collector/: Cargo.toml
plugins/capability-collector/src/: lib.rs
plugins/discovery/: Cargo.toml
plugins/discovery/src/: lib.rs  scanner.rs  test_hooks.rs
plugins/discovery/tests/: aborts_when_snapshot_load_fails.rs  dispatch_scan_library.rs
plugins/ffmpeg-executor/: Cargo.toml
plugins/ffmpeg-executor/src/: command.rs  cropdetect.rs  executor.rs  hwaccel.rs  lib.rs  probe.rs  progress.rs  vmaf.rs  vmaf_iterate.rs
plugins/ffmpeg-executor/tests/: vmaf.rs  vmaf_iterate.rs
plugins/ffprobe-introspector/: Cargo.toml
plugins/ffprobe-introspector/src/: ffprobe.rs  lib.rs  parser.rs
plugins/health-checker/: Cargo.toml
plugins/health-checker/src/: lib.rs
plugins/job-manager/: Cargo.toml
plugins/job-manager/src/: lib.rs  plan_limiter.rs  progress.rs  queue.rs  test_helpers.rs  test_support.rs  worker.rs  worker_stream.rs
plugins/mkvtoolnix-executor/: Cargo.toml
plugins/mkvtoolnix-executor/src/: lib.rs  merge.rs  propedit.rs  test_helpers.rs
plugins/phase-orchestrator/: Cargo.toml
plugins/phase-orchestrator/src/: lib.rs  plugin.rs
plugins/policy-evaluator/: Cargo.toml
plugins/policy-evaluator/src/: condition.rs  container_compat.rs  evaluator.rs  field.rs  filter.rs  lib.rs  plugin.rs
plugins/policy-evaluator/tests/: dispatch_evaluate_policy.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs
plugins/report/: Cargo.toml
plugins/report/src/: lib.rs  query.rs  tests.rs
plugins/sqlite-store/: Cargo.toml
plugins/sqlite-store/benches/: BASELINE.md  scan_session.rs  stats_sink.rs  verification_due.rs
plugins/sqlite-store/src/: event_handlers.rs  lib.rs  schema.rs  stats_sink.rs  store.rs
plugins/sqlite-store/tests/: mutation_seam_integration.rs  transition_lineage.rs
plugins/tool-detector/: Cargo.toml
plugins/tool-detector/src/: lib.rs
plugins/verifier/: Cargo.toml
plugins/verifier/src/: config.rs  hash.rs  hwaccel.rs  lib.rs  quarantine.rs  quick.rs  thorough.rs  util.rs
plugins/web-server/: Cargo.toml
plugins/web-server/src/: error.rs  errors.rs  lib.rs  middleware.rs  router.rs  server.rs  sse.rs  state.rs  templates.rs  views.rs
plugins/web-server/static/: checksums.txt
plugins/web-server/templates/: base.html  dashboard.html  estimates.html  file_detail.html  integrity.html  jobs.html  library.html  plugins.html  policies.html  policy_editor.html  settings.html
plugins/web-server/tests/: api_tests.rs  sse_stream.rs  template_triggers.rs
plugins/web-sse-bridge/: Cargo.toml
plugins/web-sse-bridge/src/: lib.rs
wasm-plugins/example-metadata/: Cargo.toml
wasm-plugins/example-metadata/src/: lib.rs
wasm-plugins/handbrake-executor/: Cargo.toml
wasm-plugins/handbrake-executor/src/: lib.rs
wasm-plugins/sonarr-metadata/: Cargo.toml
wasm-plugins/sonarr-metadata/src/: lib.rs
wasm-plugins/subtitle-generator/: Cargo.toml
wasm-plugins/subtitle-generator/src/: lib.rs
(+462 files in other folders)
