[workspace]
resolver = "2"
members = [
    "crates/voom-domain",
    "crates/voom-dsl",
    "crates/voom-kernel",
    "plugins/sqlite-store",
    "plugins/discovery",
    "plugins/ffprobe-introspector",
    "plugins/tool-detector",
    "plugins/policy-evaluator",
    "plugins/phase-orchestrator",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
voom-domain = { path = "crates/voom-domain" }
voom-dsl = { path = "crates/voom-dsl" }
voom-kernel = { path = "crates/voom-kernel" }
voom-policy-evaluator = { path = "plugins/policy-evaluator" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# DateTime & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasmtime = "29"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# File walking & hashing
walkdir = "2"
rayon = "1"
ignore = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
