[workspace]
resolver = "2"
members = [
    "crates/voom-domain",
    "crates/voom-dsl",
    "crates/voom-kernel",
    "crates/voom-wit",
    "crates/voom-plugin-sdk",
    "crates/voom-policy-testing",
    "plugins/sqlite-store",
    "plugins/discovery",
    "plugins/ffprobe-introspector",
    "plugins/tool-detector",
    "plugins/policy-evaluator",
    "plugins/phase-orchestrator",
    "plugins/mkvtoolnix-executor",
    "plugins/backup-manager",
    "plugins/ffmpeg-executor",
    "plugins/job-manager",
    "plugins/web-server",
    "plugins/web-sse-bridge",
    "plugins/health-checker",
    "plugins/bus-tracer",
    "plugins/capability-collector",
    "plugins/report",
    "plugins/verifier",
    "crates/voom-process",
    "crates/voom-cli",
]
exclude = [
    "wasm-plugins/example-metadata",
    "wasm-plugins/radarr-metadata",
    "wasm-plugins/sonarr-metadata",
    "wasm-plugins/whisper-transcriber",
    "wasm-plugins/audio-synthesizer",
    "wasm-plugins/handbrake-executor",
    "wasm-plugins/audio-language-detector",
    "wasm-plugins/subtitle-generator",
    "crates/voom-dsl/fuzz",
]

[workspace.lints.clippy]
missing_errors_doc = "allow"

[workspace.package]
edition = "2021"
authors = ["David Christensen"]
license = "AGPL-3.0-or-later"
rust-version = "1.82"
repository = "https://github.com/randomparity/voom"
readme = "README.md"
keywords = ["video", "media", "policy", "mkvtoolnix", "ffmpeg"]
categories = ["multimedia"]

[workspace.dependencies]
voom-domain = { path = "crates/voom-domain" }
voom-dsl = { path = "crates/voom-dsl" }
voom-kernel = { path = "crates/voom-kernel" }
voom-wit = { path = "crates/voom-wit" }
voom-plugin-sdk = { path = "crates/voom-plugin-sdk" }
voom-policy-testing = { path = "crates/voom-policy-testing" }
voom-process = { path = "crates/voom-process" }
voom-sqlite-store = { path = "plugins/sqlite-store" }
voom-discovery = { path = "plugins/discovery" }
voom-ffprobe-introspector = { path = "plugins/ffprobe-introspector" }
voom-tool-detector = { path = "plugins/tool-detector" }
voom-verifier = { path = "plugins/verifier" }
voom-policy-evaluator = { path = "plugins/policy-evaluator" }
voom-phase-orchestrator = { path = "plugins/phase-orchestrator" }
voom-mkvtoolnix-executor = { path = "plugins/mkvtoolnix-executor" }
voom-ffmpeg-executor = { path = "plugins/ffmpeg-executor" }
voom-backup-manager = { path = "plugins/backup-manager" }
voom-job-manager = { path = "plugins/job-manager" }
voom-web-server = { path = "plugins/web-server" }
voom-web-sse-bridge = { path = "plugins/web-sse-bridge" }
voom-health-checker = { path = "plugins/health-checker" }
voom-bus-tracer = { path = "plugins/bus-tracer" }
voom-capability-collector = { path = "plugins/capability-collector" }
voom-report = { path = "plugins/report" }

# Async
tokio = { version = "=1.50.0", features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = "=0.7.18"
tokio-stream = { version = "=0.1.18", features = ["sync"] }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
rmp-serde = "=1.3.1"
sha2 = "=0.10.9"
similar = "=2.7.0"

# DateTime & IDs
chrono = { version = "=0.4.44", features = ["serde"] }
uuid = { version = "=1.22.0", features = ["v4", "serde"] }

# Synchronization
parking_lot = "=0.12.5"

# Text matching
regex = "=1.12.3"

# Errors
thiserror = "=2.0.18"
anyhow = "=1.0.102"

# Versioning
semver = "=1.0.27"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
tracing-test = "=0.2.6"

# WASM
wasmtime = { version = "=29.0.1", features = ["component-model"] }

# Config
toml = "=0.8.23"

# Database
rusqlite = { version = "=0.31.0", features = ["bundled"] }
r2d2 = "=0.8.10"
r2d2_sqlite = "=0.24.0"

# File walking & hashing
walkdir = "=2.5.0"
rayon = "=1.11.0"
xxhash-rust = { version = "=0.8.15", features = ["xxh3"] }

# HTTP
ureq = "=2.12.1"

# Subprocess & cleanup
wait-timeout = "=0.2.1"
scopeguard = "=1.2.0"

# File locking
fs2 = "=0.4.3"

# CSV
csv = "=1.4.0"

# Rate limiting
governor = "=0.10.4"

# Testing
insta = { version = "=1.46.3", features = ["yaml"] }
proptest = "=1.11.0"
proptest-derive = "=0.8.0"
tempfile = "=3.27.0"
