[workspace]
resolver = "2"
members = [
    "crates/voom-domain",
    "crates/voom-dsl",
    "crates/voom-kernel",
    "crates/voom-wit",
    "crates/voom-plugin-sdk",
    "crates/voom-policy-testing",
    "plugins/sqlite-store",
    "plugins/discovery",
    "plugins/ffprobe-introspector",
    "plugins/tool-detector",
    "plugins/policy-evaluator",
    "plugins/phase-orchestrator",
    "plugins/mkvtoolnix-executor",
    "plugins/backup-manager",
    "plugins/ffmpeg-executor",
    "plugins/job-manager",
    "plugins/web-server",
    "plugins/web-sse-bridge",
    "plugins/health-checker",
    "plugins/bus-tracer",
    "plugins/capability-collector",
    "plugins/report",
    "plugins/verifier",
    "crates/voom-process",
    "crates/voom-cli",
]
exclude = [
    "wasm-plugins/example-metadata",
    "wasm-plugins/radarr-metadata",
    "wasm-plugins/sonarr-metadata",
    "wasm-plugins/whisper-transcriber",
    "wasm-plugins/audio-synthesizer",
    "wasm-plugins/handbrake-executor",
    "wasm-plugins/audio-language-detector",
    "wasm-plugins/subtitle-generator",
    "crates/voom-dsl/fuzz",
]

[workspace.lints.clippy]
missing_errors_doc = "allow"

[workspace.package]
edition = "2024"
authors = ["David Christensen"]
license = "AGPL-3.0-or-later"
rust-version = "1.85"
repository = "https://github.com/randomparity/voom"
readme = "README.md"
keywords = ["video", "media", "policy", "mkvtoolnix", "ffmpeg"]
categories = ["multimedia"]

[workspace.dependencies]
voom-domain = { path = "crates/voom-domain" }
voom-dsl = { path = "crates/voom-dsl" }
voom-kernel = { path = "crates/voom-kernel" }
voom-wit = { path = "crates/voom-wit" }
voom-plugin-sdk = { path = "crates/voom-plugin-sdk" }
voom-policy-testing = { path = "crates/voom-policy-testing" }
voom-process = { path = "crates/voom-process" }
voom-sqlite-store = { path = "plugins/sqlite-store" }
voom-discovery = { path = "plugins/discovery" }
voom-ffprobe-introspector = { path = "plugins/ffprobe-introspector" }
voom-tool-detector = { path = "plugins/tool-detector" }
voom-verifier = { path = "plugins/verifier" }
voom-policy-evaluator = { path = "plugins/policy-evaluator" }
voom-phase-orchestrator = { path = "plugins/phase-orchestrator" }
voom-mkvtoolnix-executor = { path = "plugins/mkvtoolnix-executor" }
voom-ffmpeg-executor = { path = "plugins/ffmpeg-executor" }
voom-backup-manager = { path = "plugins/backup-manager" }
voom-job-manager = { path = "plugins/job-manager" }
voom-web-server = { path = "plugins/web-server" }
voom-web-sse-bridge = { path = "plugins/web-sse-bridge" }
voom-health-checker = { path = "plugins/health-checker" }
voom-bus-tracer = { path = "plugins/bus-tracer" }
voom-capability-collector = { path = "plugins/capability-collector" }
voom-report = { path = "plugins/report" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
sha2 = "0.10"

# DateTime & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Synchronization
parking_lot = "0.12"

# Text matching
regex = "1"
similar = "3.1.0"

# Errors
thiserror = "2"
anyhow = "1"

# Versioning
semver = "1.0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

# WASM
wasmtime = { version = "36", features = ["component-model"] }

# Config
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# File walking & hashing
walkdir = "2"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# HTTP
ureq = "2"

# Subprocess & cleanup
wait-timeout = "0.2"
scopeguard = "1"

# File locking
fs2 = "0.4"

# CSV
csv = "1"

# Rate limiting
governor = "0.10"

# Testing
insta = { version = "1", features = ["yaml"] }
proptest = "1"
proptest-derive = "0.8"
tempfile = "3"
