[package]
name = "voom-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI interface for VOOM — Video Orchestration Operations Manager"

[[bin]]
name = "voom"
path = "src/main.rs"

[dependencies]
voom-domain.workspace = true
voom-dsl.workspace = true
voom-kernel.workspace = true
voom-sqlite-store.workspace = true
voom-discovery.workspace = true
voom-ffprobe-introspector.workspace = true
voom-tool-detector.workspace = true
voom-policy-evaluator.workspace = true
voom-phase-orchestrator.workspace = true
voom-mkvtoolnix-executor.workspace = true
voom-ffmpeg-executor.workspace = true
voom-backup-manager.workspace = true
voom-job-manager.workspace = true
voom-web-server.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Output formatting
comfy-table = "7"
console = "0.15"
indicatif = "0.17"

# Async
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Errors & logging
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Other
uuid.workspace = true
chrono.workspace = true
dirs = "5"
toml = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
