[package]
name = "voom-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI interface for VOOM — Video Orchestration Operations Manager"

[[bin]]
name = "voom"
path = "src/main.rs"

[lib]
name = "voom_cli"
path = "src/lib.rs"

[dependencies]
voom-domain.workspace = true
voom-dsl.workspace = true
voom-kernel.workspace = true
voom-process.workspace = true
voom-sqlite-store.workspace = true
voom-discovery.workspace = true
voom-ffprobe-introspector.workspace = true
voom-tool-detector.workspace = true
voom-policy-evaluator.workspace = true
voom-policy-testing.workspace = true
voom-phase-orchestrator.workspace = true
voom-mkvtoolnix-executor.workspace = true
voom-ffmpeg-executor.workspace = true
voom-backup-manager.workspace = true
voom-job-manager.workspace = true
voom-web-server.workspace = true
voom-web-sse-bridge.workspace = true
voom-health-checker.workspace = true
voom-bus-tracer.workspace = true
voom-capability-collector.workspace = true
voom-report.workspace = true
voom-verifier.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Output formatting
comfy-table = "7"
console = "0.16"
indicatif = "0.18"

# Async
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# CSV
csv = { workspace = true }

# Errors & logging
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Concurrency
num_cpus.workspace = true
parking_lot.workspace = true
rayon.workspace = true

# Other
uuid.workspace = true
chrono.workspace = true
dirs = "6"
fs2 = { workspace = true }
toml = { workspace = true }

[features]
default = ["wasm"]
wasm = ["voom-kernel/wasm"]
functional = []
integration = []
# Enable per-root scan-delay injection for acceptance tests.
test-hooks = ["voom-discovery/test-hooks"]

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2"
insta = { workspace = true, features = ["json"] }
predicates = "3"
rand = "0.10"
rusqlite.workspace = true
tempfile.workspace = true
tokio-util.workspace = true
voom-domain = { workspace = true, features = ["testing"] }
voom-discovery.workspace = true
voom-sqlite-store.workspace = true
voom-ffmpeg-executor = { workspace = true, features = ["testing"] }
voom-mkvtoolnix-executor = { workspace = true, features = ["testing"] }
