[package]
name = "voom-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Domain types and utilities for VOOM — Video Orchestration Operations Manager"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[features]
testing = []

[lints.clippy]
missing_errors_doc = "allow"

[dev-dependencies]
insta = { workspace = true }
rmp-serde = { workspace = true }
