[package]
name = "voom-domain"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Domain types and utilities for VOOM — Video Orchestration Operations Manager"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true, optional = true }

[features]
testing = ["dep:parking_lot"]

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }
rmp-serde = { workspace = true }
tempfile = { workspace = true }
