[package]
name = "voom-dsl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DSL parser and compiler for VOOM policy files"

[dependencies]
pest = "2"
pest_derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
thiserror = { workspace = true }
voom-domain = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
