[package]
name = "voom-dsl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DSL parser and compiler for VOOM policy files"

[features]
# Exposes `voom_dsl::testing` strategies for downstream proptest consumers.
# Enabled by integration tests via dev-dependencies on this crate with features = ["proptest"].
proptest = ["dep:proptest", "dep:proptest-derive"]

[dependencies]
pest = "2"
pest_derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
voom-domain = { workspace = true }
xxhash-rust = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }
voom-dsl = { path = ".", features = ["proptest"] }
