[package]
name = "voom-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core kernel for VOOM — event bus, plugin registry, and capability routing"

[dependencies]
voom-domain = { workspace = true }
voom-wit = { path = "../voom-wit" }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
ureq = "2"
wait-timeout = { workspace = true }
wasmtime = { version = "29", optional = true, features = ["component-model"] }

[features]
default = []
wasm = ["dep:wasmtime"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
