[package]
name = "voom-kernel"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core kernel for VOOM — event bus, plugin registry, and capability routing"

[dependencies]
voom-domain = { workspace = true }
voom-wit = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
ureq = { workspace = true, optional = true }
wait-timeout = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }

[features]
default = []
wasm = ["dep:wasmtime", "dep:ureq", "dep:wait-timeout"]

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
voom-domain = { workspace = true, features = ["testing"] }
