[package]
name = "voom-plugin-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SDK for building VOOM WASM plugins"

[dependencies]
voom-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
