[package]
name = "voom-plugin-sdk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SDK for building VOOM WASM plugins"

[dependencies]
voom-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
