[package]
name = "voom-policy-testing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
similar.workspace = true
thiserror.workspace = true
voom-domain.workspace = true
voom-dsl.workspace = true
voom-policy-evaluator.workspace = true
insta.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true
