[package]
name = "voom-process"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Subprocess utilities for VOOM executor plugins"

[dependencies]
voom-domain = { workspace = true }
wait-timeout = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
