[package]
name = "voom-wit"
version = "0.1.0"
edition.workspace = true
description = "WIT interface definitions and type conversion utilities for VOOM WASM plugins"

[dependencies]
voom-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
