[package]
name = "voom-backup-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
