[package]
name = "voom-backup-manager"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Backup manager plugin for VOOM — file backup, restore, and disk space management"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
libc = "0.2"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
