[package]
name = "voom-discovery"
version = "0.1.0"
edition.workspace = true

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
