[package]
name = "voom-discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "File discovery plugin for VOOM — parallel filesystem scanning with content hashing"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
xxhash-rust = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
