[package]
name = "voom-ffmpeg-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
