[package]
name = "voom-ffmpeg-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FFmpeg executor plugin for VOOM — transcoding and muxing with hardware acceleration"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
voom-process = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
