[package]
name = "voom-ffprobe-introspector"
version = "0.1.0"
edition.workspace = true

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
