[package]
name = "voom-ffprobe-introspector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FFprobe introspection plugin for VOOM — media metadata extraction"

[dependencies]
voom-domain = { workspace = true }
voom-process = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
