[package]
name = "voom-ffprobe-introspector"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FFprobe introspection plugin for VOOM — media metadata extraction"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
voom-process = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
voom-domain = { workspace = true, features = ["testing"] }
tempfile = { workspace = true }
insta = { workspace = true }
