[package]
name = "voom-health-checker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Health check plugin for VOOM — runtime system readiness monitoring"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
