[package]
name = "voom-job-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Job manager plugin for VOOM — background job queue with concurrent workers"

[dependencies]
voom-domain = { path = "../../crates/voom-domain" }
voom-kernel = { path = "../../crates/voom-kernel" }

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# DateTime & IDs
chrono.workspace = true
uuid.workspace = true

# Errors & logging
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
voom-domain = { path = "../../crates/voom-domain", features = ["testing"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
