[package]
name = "voom-mkvtoolnix-executor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MKVToolNix executor plugin for VOOM — mkvmerge and mkvpropedit operations"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
voom-process = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
scopeguard = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
