[package]
name = "voom-phase-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
voom-dsl = { workspace = true }
voom-policy-evaluator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
