[package]
name = "voom-phase-orchestrator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Phase orchestration plugin for VOOM — sequences policy phases with dependency resolution"

[dependencies]
voom-domain = { workspace = true }
voom-dsl = { workspace = true }
voom-kernel = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
voom-dsl = { workspace = true }
voom-policy-evaluator = { workspace = true }
