[package]
name = "voom-policy-evaluator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Policy evaluation plugin for VOOM — applies compiled policies to media files"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
voom-dsl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1"

[dev-dependencies]
insta = { workspace = true }
